# aimoon2

./: .gitignore  README.md  pyproject.toml
binance_futures_data/: README.md  download.py  download_log.txt  requirements.txt  test_system.py
binance_futures_data/config/: settings.yaml  symbols.yaml
binance_futures_data/data/processed/fundingRate/1000000BOBUSDT/: 1000000BOBUSDT-fundingRate-2025-06.parquet  1000000BOBUSDT-fundingRate-2025-07.parquet  (+1 more)
binance_futures_data/downloader/: __init__.py  data_vision.py  download_tracker.py  s3_scraper.py  smart_downloader.py  symbol_manager.py
binance_futures_data/loader/: __init__.py  backtest_loader.py
binance_futures_data/scripts/: download_all_s3.py
binance_futures_data/storage/: __init__.py  integrity_checker.py  storage_manager.py
prompts/: backtest_agency_prompt.txt  head_agency_prompt.txt  research_agency_prompt.txt  research_runner_agency_prompt.txt  research_summary_agency_prompt.txt
secrets/: llm_api_key.txt.example
src/backtest_agency/: __init__.py  agency.py  config.py  main.py
src/head_agency/: __init__.py  agency.py  cli_args.py  config.py  execution.py  llm_client.py  logging_utils.py  main.py  prompt_template.py  research_metadata.py  research_plan.py
src/head_agency.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/research_agency/: __init__.py  agency.py  config.py  main.py
src/research_runner_agency/: __init__.py  agency.py  config.py  main.py
src/research_summary_agency/: __init__.py  agency.py  config.py  main.py
(+133157 files in other folders)
