[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "head-agency"
version = "0.1.0"
description = "HeadAgency orchestrator using an external LLM"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.14.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.26",
]

[project.scripts]
head-agency = "head_agency.main:main"
research-agency = "research_agency.main:main"
backtest-agency = "backtest_agency.main:main"
research-runner-agency = "research_runner_agency.main:main"
research-summary-agency = "research_summary_agency.main:main"

[tool.setuptools.packages.find]
where = ["src"]
